--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:YKxvsSkTM5qtxAkXq5oJGD9ZH0pDtFYStRROSr7ZUCk=
+APP_KEY
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
