--- a/docker-services/nginx/conf.d/nginx.conf
+++ b/docker-services/nginx/conf.d/nginx.conf
@@ -1,8 +1,12 @@
 server {
+    client_max_body_size 30M;
+
     root /var/www/html/public;
 
+    index index.php;
+
     location / {
-        try_files $uri /index.php;
+        try_files $uri /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -13,5 +17,9 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
