--- a/docker-services/app/Dockerfile
+++ b/docker-services/app/Dockerfile
@@ -23,7 +23,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
 
 WORKDIR /var/www/html
 
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY ./app/entrypoint.sh /usr/local/bin/entrypoint.sh
 
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
